[package]
name = "qi_openapi"
version = "0.1.0"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"
description = "openapi parser for qi"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.114", features = ["derive","std"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"
schemafy = "0.5.1"

[features]
default = ["std"]
std = ["serde/std"]
